# microgrid-h2-paper

./: .gitignore  APEN-D-26-09220_discussion_conclusion.md  APEN-D-26-09220_evidence_base.md  APEN-D-26-09220_front_matter.md  APEN-D-26-09220_literature.md  APEN-D-26-09220_methods.md  APEN-D-26-09220_response_to_reviewers.md  APEN-D-26-09220_results.md  APEN-D-26-09220_title_abstract_intro.md  CITATION.cff  CLAUDE.md  Cover_Letter.docx  Highlights.docx  README.md  Response_to_Reviewers.docx  cover_letter.txt  graphical_abstract_brief.txt  highlights.txt  main.tex  main_revised.tex  pyproject.toml  refs.bib  refs_additions.bib  repository_release_note.md  requirements.txt  submission_checklist.md  supplementary_information.tex
configs/: scenarios.json
data/: philippines_offgrid_8760.csv  synthetic_island_8760.csv
model/: __init__.py  dispatch_model.py  dynamics.py  load_archetypes.py  resilience.py  weather_inputs.py
results/: annual_costs.csv  cost_driver_elasticity.csv  crossover_diesel_cost.csv  dispatch_battery_hydrogen.csv  dispatch_battery_only.csv  dispatch_diesel_battery.csv  dynamics_parameters.md  frequency_response_metrics.csv  matched_backbone.csv  outage_robustness.csv  outage_robustness_d4_sweep.csv  resilience_summary.csv  sensitivity_fine.csv  sensitivity_summary.csv  summary.csv
results_v1_orig_50000kg/: dispatch_battery_hydrogen.csv  dispatch_diesel_battery.csv  h2_tank_sweep.csv  outage_events.csv  outage_seed_robustness.csv  sensitivity_summary.csv  summary.csv
scripts/: generate_synthetic_data.py  plot_base_dispatch.py  plot_cost_driver.py  (+15 more)
(+1 files in other folders)
